fix profile, wrap long hashes

--- a/src/public/stylesheets/style.sass
+++ b/src/public/stylesheets/style.sass
@@ -10,3 +10,9 @@ h1
 .btn + .btn
   margin:
     left: 3px
+
+span
+  &.wrap-block
+    width: 100%
+    word-wrap: break-word
+    display: inline-block
